First step of updating to java 11